<resources>
    <string name="app_name">InventoryAppTwo</string>
    <string name="ERROR_PRODUCT_QUERY_PROVIDER">Cannot query unknown URI %1$s</string>
    <string name="ERROR_PRODUCT_UPDATE_PROVIDER">Update is not supported for: %1$s</string>
    <string name="ERROR_PRODUCT_UPDATE_RESULT">Error Updating the product</string>
    <string name="ERROR_PRODUCT_UPDATE_RESULT_SAVE">Product successfully updated at row id: %1$d</string>
    <string name="ERROR_PRODUCT_UPDATE_PRODUCT_NAME">Product requires a name\n</string>
    <string name="ERROR_PRODUCT_UPDATE_PRODUCT_PRICE">Product requires a price\n</string>
    <string name="ERROR_PRODUCT_UPDATE_PRODUCT_QUANTITY">Product requires a quantity\n</string>
    <string name="ERROR_PRODUCT_UPDATE_PRODUCT_PRICE_RANGE">Product price must be between %1$d and %2$d\n</string>
    <string name="ERROR_PRODUCT_UPDATE_PRODUCT_QUANTITY_RANGE">Product quantity must be between %1$d and %2$d\n</string>
    <string name="ERROR_PRODUCT_UPDATE_PRODUCT_SUPPLIER_NAME">Invalid Supplier Name entered\n</string>
    <string name="ERROR_PRODUCT_UPDATE_PRODUCT_SUPPLIER_PHONE">Invalid Supplier Phone Number entered\n</string>
    <string name="ERROR_PRODUCT_INSERT_PROVIDER">Insertion is not supported for Uri %1$s</string>
    <string name="ERROR_PRODUCT_INSERT_RESULT">Error saving the product</string>
    <string name="ERROR_PRODUCT_DELETE_RESULT">Error deleting the product</string>
    <string name="ERROR_PRODUCT_UNKNOWN_URI_TYPE">Unknown URI %1$s with match %2$d</string>
    <string name="ERROR_PRODUCT_PROVIDER_DELETE">Deletion is not supported for %1$s</string>
    <string name="PRODUCT_SALE_BUTTON">Sale</string>
    <string name="PRODUCT_TEXT_EMPTY_VIEW">To populate the Products Database:\n1) Enter a Product Description (Required)\n2) Enter a Product Price (Required)\n3) Enter a Product Quantity (Required)\n4) Enter a Product Supplier Name (Optional)\n5) Enter a Product Supplier Phone Number (Optional)\n6) Click the button on the lower right to start\n</string>
    <string name="PRODUCT_EDIT_LABEL_NAME">Product Name:</string>
    <string name="PRODUCT_EDIT_LABEL_NAME_TEXT">Name</string>
    <string name="PRODUCT_EDIT_LABEL_PRICE">Product Price:</string>
    <string name="PRODUCT_EDIT_LABEL_PRICE_TEXT">0</string>
    <string name="PRODUCT_EDIT_LABEL_QUANTITY">Product Quantity:</string>
    <string name="PRODUCT_EDIT_LABEL_QUANTITY_TEXT">0</string>
    <string name="PRODUCT_EDIT_LABEL_QUANTITY_ADD">+</string>
    <string name="PRODUCT_EDIT_LABEL_QUANTITY_MINUS">-</string>
    <string name="PRODUCT_EDIT_LABEL_SAVE">Save</string>
    <string name="PRODUCT_EDIT_LABEL_DELETE">Delete</string>
    <string name="PRODUCT_EDIT_LABEL_UPDATE">Update</string>
    <string name="SUPPLIER_EDIT_LABEL_NAME">Supplier Name:</string>
    <string name="SUPPLIER_EDIT_LABEL_NAME_TEXT">Name</string>
    <string name="SUPPLIER_EDIT_LABEL_PHONE">Supplier Phone:</string>
    <string name="SUPPLIER_EDIT_LABEL_PHONE_TEXT">Phone</string>
    <string name="SUPPLIER_EDIT_LABEL_PHONE_BUTTON">Call Supplier</string>
    <string name="EDIT_INVENTORY_PAGE_TITLE_ADD_NEW">Add a New Inventory Product</string>
    <string name="EDIT_INVENTORY_PAGE_TITLE_UPDATE">Update Inventory Product</string>
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>
    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
</resources>
